force-app/main/default/objects/Link__c/Link__c.object-meta.xml
<CustomObject>
    <label>Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>