force-app/main/default/objects/Link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Links</relationshipLabel>
    <relationshipName>Links</relationshipName>
    <type>Lookup</type>
</CustomField>